syntax = "proto3";
option java_multiple_files = true;
package com.grpc;
import "google/protobuf/empty.proto";

message LogMessage {
  int64 id = 1;
  int32 w = 2;
  string msg = 3;
}

message LogMessageAck {
  int64 id = 1;
  string status = 2;
}

message MessageKey {
  repeated int64 id = 1;
}

message EmptyParams{}

service SendMessageService {
  rpc send(LogMessage) returns (LogMessageAck);
}

service AppendMessageService {
  rpc append(LogMessage) returns (LogMessageAck);
}

service GetCurrentMasterMessageKeysService {
  rpc getCurrentMessageKeys(EmptyParams) returns (MessageKey);
}